# ggr-backtest

./: .gitignore  CLAUDE.md  README.md  dashboard.py  ggr_backtest.ipynb  ggr_trade_analysis.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  trace_single_trade.py
configs/sectors/: shipping.json  tech.json  us_market.json  utilities.json
dashboard/: __init__.py  app.py  data_store.py
dashboard/callbacks/: __init__.py  fund_overview.py  live_monitor.py  navigation.py  pair_inspector.py  pairs_summary.py
dashboard/components/: __init__.py  metrics_card.py
dashboard/layouts/: __init__.py  base.py  page1_fund_overview.py  page2_live_monitor.py  page2_pair_inspector.py  page3_pair_inspector.py  page3_pairs_summary.py  page4_pairs_summary.py
data/: benchmark_SPY_2024-01-01_2026-01-01.csv  prices_2024-01-01_2026-01-01.csv
scripts/: data_availability.py
src/: __init__.py  analysis.py  backtest.py  data.py  pairs.py  signals.py  staggered.py
tests/: __init__.py  conftest.py  test_analysis.py  test_backtest.py  test_backtest_wait_days.py  test_data_functions.py  test_data_integrity.py  test_edge_cases.py  test_integration.py  test_issue1_exit_distance_nan.py  test_issue2_sharpe_negative_equity.py  test_signals.py  test_ssd.py  test_staggered.py
tests/fixtures/: __init__.py  known_outcomes.py
