[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ggr-backtesting"
version = "0.1.0"
description = "GGR Distance Method backtester implementing the Gatev, Goetzmann, and Rouwenhorst (2006) statistical pair trading strategy"
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*", "configs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
