[metadata]
name = ggr-backtesting
version = 0.1.0
description = GGR Distance Method backtester implementing the Gatev, Goetzmann, and Rouwenhorst (2006) statistical pair trading strategy

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
include = src*, dashboard*, configs*
